# computer-graphics-raster-images

./: CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
include/: demosaic.h  desaturate.h  over.h  read_rgba_from_png.h  rotate.h  simulate_bayer_mosaic.h  write_ppm.h
src/: demosaic.cpp  desaturate.cpp  hsv_to_rgb.cpp  hue_shift.cpp  over.cpp  reflect.cpp  rgb_to_gray.cpp  rgb_to_hsv.cpp  rgba_to_rgb.cpp  rotate.cpp  simulate_bayer_mosaic.cpp  write_ppm.cpp
